--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "authors": [
         {
             "name": "Misha",
-            "email": "mishabbk@gmail.com",
+            "email": "mishabbk@gmail.com"
         }
     ],
     "autoload": {
